--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -18,7 +18,7 @@ security:
             anonymous: true
             guard:
                 authenticators:
-                    - App\Security\AppCustomAuthenticator
+                    - App\Security\LoginAuthenticator
             logout:
                 path: app_logout
                 # where to redirect after logout
