--- a/config/services.yaml
+++ b/config/services.yaml
@@ -11,10 +11,16 @@ services:
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
+
     App\Service\FileUploader:
         arguments:
             $targetDirectory: '%image_directory%'
 
+    login_listener:
+        class: 'App\EventListener\LoginListener'
+        #arguments: ['@security.context_listener','@doctrine']
+        tags:
+            - { name: 'kernel.event_listener', event: 'security.interactive_login' }
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
     App\:
@@ -27,6 +33,10 @@ services:
         resource: '../src/Controller'
         tags: ['controller.service_arguments']
 
+    twig.extension.date:
+        class: Guzzlefry\Twig\AgeExtension
+        tags:
+            - { name: twig.extension }
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
 
